creando nav parte 2

--- a/src/main/webapp/css/home.css
+++ b/src/main/webapp/css/home.css
@@ -16,7 +16,7 @@ nav {
     top:0;
     left:0;
     right: 0;
-    height: 150px;
+    height: 25vw;
     border: none;
     background-color: #0084B4;
     -webkit-background-size: cover;
